Update ResourceServiceImpl.java